--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
     <head>
-
+        <link rel="icon" href="https://cdn.discordapp.com/attachments/968252001081253908/975506000272556042/07869180fbc992f01fee23f85826ed18.jpg">
     </head>
 
     <body>
         <h1>Salut j'ai aucune idée de quoi mettre ici</h1>
-        <br><p>salut fey</p>
+        <br><p>salut fey salut bigou salut ader</p>
     </body>
 </html>
