--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="icon" href="https://cdn.discordapp.com/attachments/968252001081253908/975506000272556042/07869180fbc992f01fee23f85826ed18.jpg">
+        <link rel="icon" href="images/anya.jpg">
     </head>
 
     <body>
