Ajout de Anya hehe (js+css)

--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <html>
     <head>
+        <title>Salut c'est Eni</title>
         <link rel="icon" href="images/anya.jpg">
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
+        <script src="script.js"></script>
+
         <h1>Salut j'ai aucune idée de quoi mettre ici</h1>
         <br><p>salut fey salut bigou salut ader</p>
+        <img src="images/anya.jpg" class="center" onclick="anyaHehe();">
     </body>
 </html>
