J'ai changé la taille oue

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 
         <h1>Salut j'ai aucune idée de quoi mettre ici</h1>
         <br><p>salut fey salut bigou salut ader</p>
-        <img src="images/anya.jpg" class="center" onclick="anyaHehe();">
+        <img style="size:20px;" src="images/anya.jpg" class="center" onclick="anyaHehe();">
     </body>
 </html>
