--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <body>
         <script src="script.js"></script>
 
-        <h1>Salut j'ai aucune idée de quoi mettre ici</h1>
-        <br><p>salut fey salut bigou salut ader</p>
-        <img style="size:20px;" src="images/anya.jpg" class="center" onclick="anyaHehe();">
+        <h1 style="text-align: center;">Salut j'ai aucune idée de quoi mettre ici</h1>
+        <br><p style="text-align: center;">salut fey salut bigou salut ader</p>
+        <img style="width:200px;height:200px;" src="images/anya.jpg" class="center" onclick="anyaHehe();">
+        <br><p style="text-align: center;">Nombres de clics : <p style="text-align: center;" id="counter">0</p></p>
     </body>
 </html>
