--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
 
     <body>
         <script src="script.js"></script>
-        <h1 style="text-align: center;">Salut j'ai aucune idée de quoi mettre ici</h1>
-        
-        <br><p style="text-align: center;">salut fey salut bigou salut ader</p>
-        <img style="width:200px;height:200px;" src="images/anya.jpg" class="center" onclick="anyaHehe();">
-        <br><p style="text-align: center;">Nombres de clics : <p style="text-align: center;" id="counter">0</p></p>
+        <h1>Salut c'est Eni</h1>
+        <p>Il m'arrive de faire des trucs stylés des fois</p>
+        <p style="font-size: 10px;">salut fey salut bigou salut ader</p>
+        <div onclick="location.href='anya.html'" id="anya" class="button" onmouseover="blueIfy('anya', false);" onmouseleave="blueIfy('anya', true);";>
+            <img src="images/anya.jpg"> 
+            <p>Anya clicker</p>
+        </div>
     </body>
 </html>
