Ajout site taupe, sound effect Anya, réseaux sous ma pp, séparation de deux scripts, intégration d'Awesome Font.

--- a/anya.html
+++ b/anya.html
@@ -8,5 +8,8 @@
         <script src="script.js"></script>
         <img style="width:200px;height:200px;" src="images/anya.jpg" class="center" onclick="anyaHehe();">
         <br><p>Nombres de clics : <p id="counter">0</p></p>
+
+
+        <p> <a href="index.html">Retour à la page principale</a></p>
     </body>
 </html>
