--- a/index.html
+++ b/index.html
@@ -3,16 +3,28 @@
         <title>Salut c'est Eni</title>
         <link rel="icon" href="images/anya.jpg">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" 
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
     </head>
 
     <body>
         <script src="script.js"></script>
+        <img class="avatar" src="images/urahara_av.png"><br>
         <h1>Salut c'est Eni</h1>
+        <center>
+                <i onclick="location.href = 'https:\/\/twitter.com/TheySawEni'" class="fa fa-twitter fa-2x" aria-hidden="true"></i>
+                <i onclick="location.href = 'https:\/\/github.com/Enissays'" class="fa fa-github fa-2x" aria-hidden="true"></i>
+        </center>
         <p>Il m'arrive de faire des trucs stylés des fois</p>
         <p style="font-size: 10px;">salut fey salut bigou salut ader</p>
         <div onclick="location.href='anya.html'" id="anya" class="button" onmouseover="blueIfy('anya', false);" onmouseleave="blueIfy('anya', true);";>
             <img src="images/anya.jpg"> 
             <p>Anya clicker</p>
+        </div>
+        <br>
+        <div onclick="location.href='taupe.html'" id="taupe" class="button" onmouseover="blueIfy('taupe', false);" onmouseleave="blueIfy('taupe', true);";>
+            <img src="images/taupe_sb.png"> 
+            <p>Taupe</p>
         </div>
     </body>
 </html>
