added howtojoin and cheval

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <center>
                 <i onclick="location.href = 'https:\/\/twitter.com/TheySawEni'" class="fa fa-twitter fa-2x" aria-hidden="true"></i>
                 <i onclick="location.href = 'https:\/\/github.com/Enissays'" class="fa fa-github fa-2x" aria-hidden="true"></i>
+                <i onclick="location.href = 'https:\/\/twitch.tv/Enissays'" class="fa fa-twitch fa-2x" aria-hidden="true"></i>
         </center>
         <p>Il m'arrive de faire des trucs stylés des fois</p>
         <p style="font-size: 10px;">salut fey salut bigou salut ader</p>
