--- a/howtojoin.html
+++ b/howtojoin.html
@@ -5,6 +5,9 @@
         <link rel="stylesheet" href="style_howto.css">
         <link rel="stylesheet" 
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+        <meta property="og:title" content="Comment nous rejoindre ?">
+        <meta property="og:description" content="Petite description rapide de comment nous rejoindre avec le chat de proximité, peu importe votre plateforme!">
+        <meta property="og:image" content="images/zimo.png">
     </head>
     <body>
         <p>Oh, une soirée Among Us, mais avec un chat de proximité, comment faire?</p>
