--- a/howtojoin.html
+++ b/howtojoin.html
@@ -7,6 +7,7 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
         <meta property="og:title" content="Comment nous rejoindre ?">
         <meta property="og:description" content="Petite description rapide de comment nous rejoindre avec le chat de proximité, peu importe votre plateforme!">
+        <meta property="og:url" content="https://enis.ninja/howtojoin.html" />
         <meta property="og:image" content="https://cdn.discordapp.com/attachments/912834233733636106/1098578384721825894/zimo.png">
     </head>
     <body>
